--- a/reports/gapminder_report.Rmd
+++ b/reports/gapminder_report.Rmd
@@ -3,35 +3,18 @@ title: "A UN report on the relationships between GDP and life expectancy and CO2
 author: "Jiawei"
 date: "2023-01-18"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-# include text, codes, figures in one report all in on.
 
 ```{r load-packages}
 library(tidyverse)
+library(knitr)
 ```
 
 
@@ -40,18 +23,34 @@ library(tidyverse)
 geom_histogram()
 ```
 
-```{r gdp-lifeExp-1997-plot3}
-# make plot of GDP (x-axis) vs LifeExp (y-axis)
-gapminder_data_2007%>%
-  ggplot(aes(x=gdpPercap,y=lifeExp))+
-```
 
 
-```{r gdp-lifeExp-1997-plot4}
-gapminder_data_2007%>%
-  ggplot(aes(x=gdpPercap,y=lifeExp))+
+```{r gdp-lifeExp-1997-plot4, echo=FALSE, }
+
+gapminder_1997<-read.csv("../data/gapminder_1997.csv")
+  ggplot(gapminder_1997,aes(x=gdpPercap,y=lifeExp))+
   geom_point()+
   labs(x="GDP Per Capita",y="Life Expectancy")
 
-```
 
+```
+```{r basic-country-stats}
+
+nCountries<-
+  gapminder_1997%>%
+  select(country)%>%
+  n_distinct()
+
+```
+the number of countries in the dataset is `r nCountries`.
+
+|HEADER 1|HEADER 2|
+|-------------|-------------|
+|row 1, column1|row 1, column 2|
+|row 2, column1|row 2, column 2|
+```{r table}
+gapminder_1997%>%
+  filter(continent =="Oceania")%>%
+  kable()
+
+```
